--- a/CSS.html
+++ b/CSS.html
@@ -22,14 +22,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c0.jpg"
+          src="./Images/c0.jpg"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 0 Inroduction to CSS</h5>
 
           <a
-            href="/CSS/Chapter-0-Introduction.pdf"
+            href="./CSS/Chapter-0-Introduction.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -40,14 +40,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c1.jfif"
+          src="./Images/c1.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 1 Creating our first CSS website</h5>
 
           <a
-            href="/CSS/Chapter-1-CSS-Basics.pdf"
+            href="./CSS/Chapter-1-CSS-Basics.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -58,14 +58,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c2.png"
+          src="./Images/c2.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 2 Colors and Background</h5>
 
           <a
-            href="/CSS/Chapter 2.pdf"
+            href="./CSS/Chapter 2.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -76,14 +76,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c3.jfif"
+          src="./Images/c3.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 3 CSS Box Model</h5>
 
           <a
-            href="/CSS/Chapter 3.pdf"
+            href="./CSS/Chapter 3.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -94,14 +94,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c4.jfif"
+          src="./Images/c4.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 4 Fonts and Display</h5>
 
           <a
-            href="/CSS/Chapter 4.pdf"
+            href="./CSS/Chapter 4.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -112,14 +112,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c5.jpg"
+          src="./Images/c5.jpg"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 5 Size Position and Lists</h5>
 
           <a
-            href="/CSS/Chapter 5.pdf"
+            href="./CSS/Chapter 5.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -130,14 +130,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c6.png"
+          src="./Images/c6.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 6 Flexbox</h5>
 
           <a
-            href="/CSS/Chapter 6.pdf"
+            href="./CSS/Chapter 6.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -148,14 +148,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c7.jfif"
+          src="./Images/c7.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 7 Grid media queries</h5>
 
           <a
-            href="/CSS/Chapter 7.pdf"
+            href="./CSS/Chapter 7.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -166,7 +166,7 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c8.jfif"
+          src="./Images/c8.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
@@ -175,7 +175,7 @@
           </h5>
 
           <a
-            href="/Javascript/Chapter 8.pdf"
+            href="./Javascript/Chapter 8.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
