--- a/HTML.html
+++ b/HTML.html
@@ -22,14 +22,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c0.jpg"
+          src="./Images/c0.jpg"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 0 Introduction</h5>
 
           <a
-            href="/HTML/html_course_chapter_0.pdf"
+            href="./HTML/html_course_chapter_0.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -40,14 +40,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c1.jfif"
+          src="./Images/c1.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 1 Creating our first Website</h5>
 
           <a
-            href="/HTML/html_course_chapter1_.pdf"
+            href="./HTML/html_course_chapter1_.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -58,14 +58,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c2.png"
+          src="./Images/c2.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 2 Basic HTML Tags</h5>
 
           <a
-            href="/HTML/html_course_chapter_2.pdf"
+            href="./HTML/html_course_chapter_2.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -76,14 +76,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c3.jfif"
+          src="./Images/c3.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 3 Creating a page layout</h5>
 
           <a
-            href="/HTML/html_course_chapter_3.pdf"
+            href="./HTML/html_course_chapter_3.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -94,14 +94,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c4.jfif"
+          src="./Images/c4.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 4 Lists Tables and Forms</h5>
 
           <a
-            href="HTML/html_course_chapter_4.pdf"
+            href="./HTML/html_course_chapter_4.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -112,14 +112,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c5.jpg"
+          src="./Images/c5.jpg"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 5 SEO</h5>
 
           <a
-            href="HTML/html_course_chapter_5.pdf"
+            href="./HTML/html_course_chapter_5.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
