--- a/Javascript.html
+++ b/Javascript.html
@@ -22,14 +22,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c1.jfif"
+          src="./Images/c1.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 1 Variables and Data types</h5>
 
           <a
-            href="/Javascript/JavaScript Chapter 1 - Variables and Data.pdf"
+            href="./Javascript/JavaScript Chapter 1 - Variables and Data.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -40,14 +40,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c2.png"
+          src="./Images/c2.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 2 Expressions and Conditionals</h5>
 
           <a
-            href="/Javascript/Chapter 2.pdf"
+            href="./Javascript/Chapter 2.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -58,14 +58,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c3.jfif"
+          src="./Images/c3.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 3 Loops and Functions</h5>
 
           <a
-            href="/Javascript/Chapter 3.pdf"
+            href="./Javascript/Chapter 3.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -76,14 +76,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c4.jfif"
+          src="./Images/c4.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 4 Strings</h5>
 
           <a
-            href="/Javascript/Chapter4.pdf"
+            href="./Javascript/Chapter4.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -94,14 +94,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c5.jpg"
+          src="./Images/c5.jpg"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 5 Arrays</h5>
 
           <a
-            href="/Javascript/Chapter 5 - Arrays.pdf"
+            href="./Javascript/Chapter 5 - Arrays.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -112,14 +112,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c6.png"
+          src="./Images/c6.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 6 JavaScript in browser</h5>
 
           <a
-            href="/Javascript/Chapter 6.pdf"
+            href="./Javascript/Chapter 6.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -130,14 +130,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c7.jfif"
+          src="./Images/c7.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 7 Walking the DOM</h5>
 
           <a
-            href="/Javascript/Chapter 7.pdf"
+            href="./Javascript/Chapter 7.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -148,14 +148,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c8.jfif"
+          src="./Images/c8.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 8 Events and other DOM properties</h5>
 
           <a
-            href="/Javascript/Chapter 8.pdf"
+            href="./Javascript/Chapter 8.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -166,7 +166,7 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c9.jfif"
+          src="./Images/c9.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
@@ -175,7 +175,7 @@
           </h5>
 
           <a
-            href="/Javascript/Chapter 9.pdf"
+            href="./Javascript/Chapter 9.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -186,7 +186,7 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c10.png"
+          src="./Images/c10.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
@@ -195,7 +195,7 @@
           </h5>
 
           <a
-            href="/Javascript/JavaScript Chapter 10.pdf"
+            href="./Javascript/JavaScript Chapter 10.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -206,14 +206,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c11.jfif"
+          src="./Images/c11.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 11 Object Oriented Programming</h5>
 
           <a
-            href="/Javascript/Chapter 11 - Object Oriented Programming.pdf"
+            href="./Javascript/Chapter 11 - Object Oriented Programming.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
@@ -224,14 +224,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/c12.jfif"
+          src="./Images/c12.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Chapter 12 Advanced Javascript</h5>
 
           <a
-            href="/Javascript/Chapter 12 - Advanced JavaScript.pdf"
+            href="./Javascript/Chapter 12 - Advanced JavaScript.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
