--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/CSS.png"
+          src="./Images/CSS.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">CSS</h5>
 
           <a
-            href="/CSS.html"
+            href="./CSS.html"
             class="btn btn-primary"
             >Go to CSS Page</a
           >
@@ -39,14 +39,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/Javascript.png"
+          src="./Images/Javascript.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">Javascript</h5>
 
           <a
-            href="/Javascript.html"
+            href="./Javascript.html"
             class="btn btn-primary"
             >Go to Javascript page</a
           >
@@ -56,14 +56,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/HTML.jfif"
+          src="./Images/HTML.jfif"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">HTML</h5>
 
           <a
-            href="/HTML.html"
+            href="./HTML.html"
             class="btn btn-primary"
             >Go HTML page</a
           >
@@ -73,14 +73,14 @@
         class="card"
         style="width: 18rem">
         <img
-          src="/Images/mongo.png"
+          src="./Images/mongo.png"
           class="card-img-top"
           alt="Normal Image" />
         <div class="card-body">
           <h5 class="card-title">MongoDB</h5>
 
           <a
-            href="/MongoDB/MongoDB Course.pdf"
+            href="./MongoDB/MongoDB Course.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
