--- a/CSS.html
+++ b/CSS.html
@@ -175,7 +175,7 @@
           </h5>
 
           <a
-            href="./Javascript/Chapter 8.pdf"
+            href="./CSS/Chapter 8.pdf"
             class="btn btn-primary"
             target="_blank"
             >Open PDF</a
