--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       rel="stylesheet"
       href="style.css" />
   </head>
-  <body style="height: 100vh">
+  <body>
     <h1 class="notes">Notes</h1>
     <div class="box">
       <div
@@ -30,6 +30,7 @@
 
           <a
             href="./CSS.html"
+            target="_blank"
             class="btn btn-primary"
             >Go to CSS Page</a
           >
@@ -48,6 +49,7 @@
           <a
             href="./Javascript.html"
             class="btn btn-primary"
+            target="_blank"
             >Go to Javascript page</a
           >
         </div>
@@ -64,6 +66,7 @@
 
           <a
             href="./HTML.html"
+            target="_blank"
             class="btn btn-primary"
             >Go HTML page</a
           >
